--- a/administrador.html
+++ b/administrador.html
@@ -113,6 +113,12 @@
                 <div class="modal-body">
                     <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroup-sizing-sm" style="width:93px !important">ID</span>
+                        </div>
+                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id="id">
+                    </div>
+                    <div class="input-group input-group-sm mb-3">
+                        <div class="input-group-prepend">
                             <span class="input-group-text" id="inputGroup-sizing-sm" style="width:93px !important">Nombre</span>
                         </div>
                         <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id="nombre">
@@ -139,7 +145,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                     <input type="hidden" id="idAEditar" value="">
-                    <button type="button" class="btn btn-primary" id="agregarproducto" onclick="Actualizar()">Actualizar</button>
+                    <button type="button" class="btn btn-primary" id="agregarproducto" onclick="insertTask()">Actualizar</button>
                 </div>
             </div>
         </div>
@@ -188,9 +194,11 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="adminaguas.js"></script>
-<script type="text/javascript" src="scriptsadmin.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
 
+<!-- <script type="text/javascript" src="adminaguas.js"></script> -->
+<!-- <script type="text/javascript" src="scriptsadmin.js"></script> -->
+<script type="text/javascript" src="scriptfire.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
