--- a/administrador.html
+++ b/administrador.html
@@ -9,7 +9,7 @@
     <title>paleteria</title>
 </head>
 
-<body style="background: #FFD6E6">
+<body onload="whatchTabs()" style="background: #FFD6E6">
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
